--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sequelize": "^6.14.0"
   },
   "devDependencies": {
+    "ioredis": "^4.28.3",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1"
   }
