--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "author": "wangpeng",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.13.4",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.14.0"
   },
   "devDependencies": {
+    "apollo-server": "^3.6.3",
+    "apollo-server-koa": "^3.6.3",
+    "graphql": "^16.3.0",
     "ioredis": "^4.28.3",
+    "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.1.1"
   }
